// Vitest Snapshot v1

exports[`Encode v38 payload > Encoded v38 message 1`] = `"🎼4/4|avkwBKqMpCKznGclvChuuh2AEExV0J14xI/KANhwiKJfVyfm2ObWb432E3aAOa7ImRoCd7/JK1dDQWk4rt9NqajTEaajARMc9hJ9GmR8lorBNRNHlgj/h1KJYk5th7Nsr04PWO0nJUKiDH2CJwieSxW2YqxCI1ceYKUYcZOsVJEZOrJ/IB8WUmU0|BjPbfiSAXCvc/2nqKv2nzQ==|Og1u5pLG9GiWsZbxQwHAGtL6Jqo=|_|Aq/bVWAKvodJuURGk3enjE1gUiu2SELM8IIKIlNGqOWM|1|ZmFjZWJvb2suY29tL3Rlc3Q=:||"`;

exports[`Encode v38 payload > Parse generated v38 message 1`] = `
OkImpl {
  "err": false,
  "ok": true,
  "val": {
    "author": OkImpl {
      "err": false,
      "ok": true,
      "val": SomeImpl {
        "none": false,
        "some": true,
        "val": ProfileIdentifier {
          "network": "facebook.com",
          "userId": "test",
        },
      },
    },
    "authorPublicKey": OkImpl {
      "err": false,
      "ok": true,
      "val": SomeImpl {
        "none": false,
        "some": true,
        "val": {
          "algr": 2,
          "key": CryptoKey {},
        },
      },
    },
    "encrypted": OkImpl {
      "err": false,
      "ok": true,
      "val": Uint8Array [
        58,
        13,
        110,
        230,
        146,
        198,
        244,
        104,
        150,
        177,
        150,
        241,
        67,
        1,
        192,
        26,
        210,
        250,
        38,
        170,
      ],
    },
    "encryption": OkImpl {
      "err": false,
      "ok": true,
      "val": {
        "AESKey": OkImpl {
          "err": false,
          "ok": true,
          "val": CryptoKey {
            Symbol(kKeyObject): SecretKeyObject {
              Symbol(kKeyType): "secret",
            },
            Symbol(kAlgorithm): {
              "length": 256,
              "name": "AES-GCM",
            },
            Symbol(kExtractable): true,
            Symbol(kKeyUsages): [
              "encrypt",
              "decrypt",
            ],
          },
        },
        "iv": OkImpl {
          "err": false,
          "ok": true,
          "val": Uint8Array [
            6,
            51,
            219,
            126,
            36,
            128,
            92,
            43,
            220,
            255,
            105,
            234,
            42,
            253,
            167,
            205,
          ],
        },
        "type": "public",
      },
    },
    "signature": OkImpl {
      "err": false,
      "ok": true,
      "val": NoneImpl {
        "none": true,
        "some": false,
      },
    },
    "version": -38,
  },
}
`;

exports[`Encode v38 payload: Encoded v38 message 1`] = `"🎼4/4|avkwBKqMpCKznGclvChuuh2AEExV0J14xI/KANhwiKJfVyfm2ObWb432E3aAOa7ImRoCd7/JK1dDQWk4rt9NqajTEaajARMc9hJ9GmR8lorBNRNHlgj/h1KJYk5th7Nsr04PWO0nJUKiDH2CJwieSxW2YqxCI1ceYKUYcZOsVJEZOrJ/IB8WUmU0|BjPbfiSAXCvc/2nqKv2nzQ==|Og1u5pLG9GiWsZbxQwHAGtL6Jqo=|_|Aq/bVWAKvodJuURGk3enjE1gUiu2SELM8IIKIlNGqOWM|1|ZmFjZWJvb2suY29tL3Rlc3Q=:||"`;

exports[`Encode v38 payload: Parse generated v38 message 1`] = `
Ok(Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "facebook.com",
    "userId": "test",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 3a0d6ee692c6f46896b196f14301c01ad2fa26aa ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 0633db7e24805c2bdcff69ea2afda7cd ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
})
`;

exports[`Parse older v38 payload that does not have newer field > Parse older v38 payload result 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      58,
      13,
      110,
      230,
      146,
      198,
      244,
      104,
      150,
      177,
      150,
      241,
      67,
      1,
      192,
      26,
      210,
      250,
      38,
      170,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "ephemeralPublicKey": {},
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          6,
          51,
          219,
          126,
          36,
          128,
          92,
          43,
          220,
          255,
          105,
          234,
          42,
          253,
          167,
          205,
        ],
      },
      "ownersAESKeyEncrypted": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          106,
          249,
          48,
          4,
          170,
          140,
          164,
          34,
          179,
          156,
          103,
          37,
          188,
          40,
          110,
          186,
          29,
          128,
          16,
          76,
          85,
          208,
          157,
          120,
          196,
          143,
          202,
          0,
          216,
          112,
          136,
          162,
          95,
          87,
          39,
          230,
          216,
          230,
          214,
          111,
          141,
          246,
          19,
          118,
          128,
          57,
          174,
          200,
          153,
          26,
          2,
          119,
          191,
          201,
          43,
          87,
          67,
          65,
          105,
          56,
          174,
          223,
          77,
          169,
          168,
          211,
          17,
          166,
          163,
          1,
          19,
          28,
          246,
          18,
          125,
          26,
          100,
          124,
          150,
          138,
          193,
          53,
          19,
          71,
          150,
          8,
          255,
          135,
          82,
          137,
          98,
          78,
          109,
          135,
          179,
          108,
          175,
          78,
          15,
          88,
          237,
          39,
          37,
          66,
          162,
          12,
          125,
          130,
          39,
          8,
          158,
          75,
          21,
          182,
          98,
          172,
          66,
          35,
          87,
          30,
          96,
          165,
          24,
          113,
          147,
          172,
          84,
          145,
          25,
          58,
          178,
          127,
          32,
          31,
          22,
          82,
          101,
          52,
        ],
      },
      "type": "E2E",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -38,
}
`;

exports[`Parse older v38 payload that does not have newer field: Parse older v38 payload result 1`] = `
Object {
  "author": Ok(None),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ 3a0d6ee692c6f46896b196f14301c01ad2fa26aa ]),
  "encryption": Ok(Object {
    "ephemeralPublicKey": Object {},
    "iv": Ok(Uint8Array [ 0633db7e24805c2bdcff69ea2afda7cd ]),
    "ownersAESKeyEncrypted": Ok(Uint8Array [ 6af93004aa8ca422b39c6725bc286eba1d80104c55d09d78c48fca00d87088a25f5727e6d8e6d66f8df613768039aec8991a0277bfc92b5743416938aedf4da9a8d311a6a301131cf6127d1a647c968ac13513479608ff875289624e6d87b36caf4e0f58ed272542a20c7d8227089e4b15b662ac4223571e60a5187193ac5491193ab27f201f16526534 ]),
    "type": "E2E",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;

exports[`Parse v38 encoded by old infra > Parse v38 payload result 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": SomeImpl {
      "none": false,
      "some": true,
      "val": ProfileIdentifier {
        "network": "facebook.com",
        "userId": "100027562249574",
      },
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": SomeImpl {
      "none": false,
      "some": true,
      "val": {
        "algr": 2,
        "key": CryptoKey {},
      },
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      58,
      13,
      110,
      230,
      146,
      198,
      244,
      104,
      150,
      177,
      150,
      241,
      67,
      1,
      192,
      26,
      210,
      250,
      38,
      170,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "AESKey": OkImpl {
        "err": false,
        "ok": true,
        "val": CryptoKey {
          Symbol(kKeyObject): SecretKeyObject {
            Symbol(kKeyType): "secret",
          },
          Symbol(kAlgorithm): {
            "length": 256,
            "name": "AES-GCM",
          },
          Symbol(kExtractable): true,
          Symbol(kKeyUsages): [
            "encrypt",
            "decrypt",
          ],
        },
      },
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          6,
          51,
          219,
          126,
          36,
          128,
          92,
          43,
          220,
          255,
          105,
          234,
          42,
          253,
          167,
          205,
        ],
      },
      "type": "public",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -38,
}
`;

exports[`Parse v38 encoded by old infra: Parse v38 payload result 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "facebook.com",
    "userId": "100027562249574",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 3a0d6ee692c6f46896b196f14301c01ad2fa26aa ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 0633db7e24805c2bdcff69ea2afda7cd ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;
